added quick setup files